--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".MyKamusApplication">
         <activity android:name=".view.detail.DetailKamusActivity"
             android:label="@string/detail_kamus"
             android:theme="@style/AppTheme.NoActionBar"/>
