--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
-    dynamicFeatures = [':maps']
+    dynamicFeatures = [':maps', ':favorite']
 }
 
 dependencies {
@@ -43,12 +43,5 @@ dependencies {
     //core
     implementation project(":core")
 
-    //navigation
-    implementation 'androidx.navigation:navigation-fragment:2.3.0'
-    implementation 'androidx.navigation:navigation-ui:2.3.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 }
